fixed overflow of background on login page

--- a/assets/css/signin.css
+++ b/assets/css/signin.css
@@ -32,6 +32,7 @@ html, body{
 	margin-bottom:32px;
 }
 
+
 /*
 ###################Button Style###########
 */
@@ -129,10 +130,12 @@ html, body{
 }
 
 #footer {
-  height: 400px;
+  min-height: 400px;
   background-color: rgba(255,255,255,1);
   text-align:center;
   margin-top: -50px;
+  padding-bottom: -150px;
+  margin-bottom: 1.5cm;
 }
 
 
@@ -148,6 +151,19 @@ html, body{
   margin-bottom: 128px;
 }
 
+.copyright
+{
+
+
+
+background-color: white;
+padding-top: 1cm;
+
+  
+
+
+
+}
 .one_full
 {
     width: 100%;
